--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,8 @@ analytics:
 author:
   name             : "Wook-Shin Han"
   avatar           : "wshan.jpg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Full professor at Departmet of Computer Science and Engineering/Department of AI/Department of IT Engineering, Vice president of Office of Academic
+Information Affairs, Leader of BK21 project for AI"
   location         : "Pohang, South Korea"
   employer         :
   pubmed           : 
