--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ Information Affairs, Leader of BK21 project for AI"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.co.kr/citations?user=Jp_w2IwAAAAJ&hl=en&oi=ao"
-  email            :
+  email            : "wshan@dblab.postech.ac.kr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
